samples/_failures_safe/1761446116_ce0867_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d378accf.c: In function ‘main’:
./samples/SAFE/__tmp_d378accf.c:168:12: error: missing terminating " character
  168 |     printf("Enter arithmetic expressions (empty line to exit
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_d378accf.c:168:5: error: expected expression at end of input
  168 |     printf("Enter arithmetic expressions (empty line to exit
      |     ^~~~~~
./samples/SAFE/__tmp_d378accf.c:168:5: error: expected declaration or statement at end of input
